deploy: 32a805316029dc515c1dedb96b0f5cb23dd13ef6

--- a/intro/git/gitflow.html
+++ b/intro/git/gitflow.html
@@ -182,8 +182,7 @@
 <ol>
 <li>
 <p>Desde el terminal del Codespace anterior teclea:</p>
-<pre><code class="language-bash">git checkout main
-git checkout -b feat/add-body
+<pre><code class="language-bash">git checkout -b feat/add-body
 </code></pre>
 </li>
 <li>
