--- a/tema2/http/prerrequisitos.html
+++ b/tema2/http/prerrequisitos.html
@@ -190,7 +190,7 @@
 </ol>
 <h3 id="codespaces"><a class="header" href="#codespaces">Codespaces</a></h3>
 <ol>
-<li>Desde tu cuenta en Github <a href="https://github.com/codespaces/new">crea</a> un Codespace en el repo <code>github/codespaces-blank</code> y arráncalo.</li>
+<li>Desde tu cuenta en Github <a href="https://github.com/codespaces/new?skip_quickstart=true&amp;machine=basicLinux32gb&amp;repo=525552024&amp;ref=main&amp;geo=EuropeWest">crea</a> un Codespace y arráncalo<sup class="footnote-reference"><a href="#1">1</a></sup></li>
 <li>En el terminal del Codespace ejecuta:
 <pre><code class="language-bash">sudo apt update ; sudo apt install -y telnet netcat
 </code></pre>
@@ -199,6 +199,9 @@
 <blockquote>
 <p>🔍 <strong>Nota:</strong> <em>Como va a ser necesario durante los ejercicios repetir el mismo comando en cada paso, puedes utilizar la tecla <kbd>↑</kbd> en el terminal para recuperar el último comando ejecutado.</em></p>
 </blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Si el enlace anterior no funciona, <a href="https://github.com/codespaces/new">crea</a> el Codespace en el repo <code>github/codespaces-blank</code></p>
+</div>
 
                     </main>
 
