--- a/intro/git/git.html
+++ b/intro/git/git.html
@@ -177,7 +177,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
-<p><strong>Git</strong> es un sistema de control de versiones (VCS) basado en el uso de ramas para gestionar los cambios. <strong>Github</strong> es un servicio de alojamiento de código que usa Git como VCS y sobre el que se ofrecen otras funcionalidades relacionadas con el desarrollo colaborativo de software.</p>
+<p>Un sistema de control de versiones (VCS) tiene 3 propósitos principales: copias de seguridad, control de cambios, y trabajo colaborativo.</p>
+<p><strong>Git</strong> es un VCS basado en el uso de ramas para gestionar los cambios. <strong>Github</strong> es un servicio de alojamiento de código que usa Git como VCS y sobre el que se ofrecen otras funcionalidades relacionadas con el desarrollo colaborativo de software.</p>
 <h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
 <ul>
 <li>
