--- a/tema2/http/http.html
+++ b/tema2/http/http.html
@@ -178,6 +178,7 @@
                     <main>
                         <h1 id="http"><a class="header" href="#http">HTTP</a></h1>
 <p><abbr title="Hypertext Transfer Protocol">HTTP</abbr> es un protocolo basado en peticiones y respuestas enviadas en texto plano usando conexiones <abbr title="Transmission Control Protocol">TCP</abbr> entre un cliente y un servidor.</p>
+<p><object type="image/svg+xml" data="./files/pila.tcp.ip.svg" width="100%"></object></p>
 <h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
 <ul>
 <li>
