deploy: 766056d380084d7e7fcd3f8a33c9a6ba47bcda60

--- a/intro/git/cd.html
+++ b/intro/git/cd.html
@@ -181,7 +181,7 @@
 <p>El despliegue continuo permite instalar automáticamente los cambios una vez que estos han superado todas las pruebas.</p>
 <ol>
 <li>
-<p>Entra en la configuración de Github-Pages del repo (<code>https://github.com/{usuario}/ci-cd/settings/pages</code>) <code>➜</code> &quot;Source&quot; <code>➜</code> &quot;GitHub Actions&quot; <code>➜</code> &quot;Static HTML&quot; <code>➜</code> &quot;Configure&quot;. Renombra el workflow a <code>cd.yml</code> y modifica las siguientes propiedades de su contenido:</p>
+<p>Entra en la configuración de Github-Pages del repo (<code>https://github.com/{usuario}/ci-cd/settings/pages</code>) <code>➜</code> &quot;Source&quot; <code>➜</code> &quot;GitHub Actions&quot; <code>➜</code> &quot;Static HTML&quot; <code>➜</code> &quot;Configure&quot;. <strong>Renombra el workflow a <code>cd.yml</code></strong> y modifica las siguientes propiedades de su contenido:</p>
 <ul>
 <li><code>name: CD</code></li>
 <li><code>path: './src'</code></li>
