--- a/intro/git/ci.html
+++ b/intro/git/ci.html
@@ -181,7 +181,7 @@
 <p>La integración continua consiste en la ejecución automática de pruebas y la obtención de sus informes cada vez que cambia el código.</p>
 <ol>
 <li>
-<p>Crea un nuevo workflow llamado <code>ci.yml</code> desde las Github-Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions/new</code>) <code>➜</code> &quot;set up a workflow yourself&quot; con el siguiente contenido:</p>
+<p>Crea un nuevo workflow <strong>llamado <code>ci.yml</code></strong> desde las Github-Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions/new</code>) <code>➜</code> &quot;set up a workflow yourself&quot; con el siguiente contenido:</p>
 <pre><code class="language-yaml">name: CI
 on:
   push:
