--- a/intro/git/gitflow.html
+++ b/intro/git/gitflow.html
@@ -182,7 +182,8 @@
 <ol>
 <li>
 <p>Desde el terminal del Codespace anterior teclea:</p>
-<pre><code class="language-bash">git checkout -b feat/add-body
+<pre><code class="language-bash">cd /workspace/ci-cd
+git checkout -b feat/add-body
 </code></pre>
 </li>
 <li>
