--- a/intro/git/repositorio.html
+++ b/intro/git/repositorio.html
@@ -181,22 +181,31 @@
 <p>Los repositorios alojan el código junto con la meta-información asociada al histórico de cambios. Github proporciona uno basado en el VCS Git como un servicio en la nube.</p>
 <ol>
 <li>
-<p>Desde tu cuenta en Github <a href="https://github.com/codespaces/new?skip_quickstart=true&amp;machine=basicLinux32gb&amp;repo=525552024&amp;ref=main&amp;geo=EuropeWest">crea</a> un Codespace y arráncalo<sup class="footnote-reference"><a href="#1">1</a></sup></p>
+<p>Desde tu cuenta personal de Github <a href="https://github.com/new">crea</a> un nuevo repositorio <strong>público</strong> llamado <code>ci-cd</code> inicializado con un fichero <code>README.md</code> .</p>
 </li>
 <li>
 <p>Una vez haya arrancado el entorno, desde el terminal del Codespace teclea:</p>
-<pre><code class="language-bash">git clone https://github.com/gitt-3-pat/p1
+<pre><code class="language-bash">cd /workspaces
+git clone https://github.com/gitt-3-pat/p1
 ls p1
 cat p1/README.md
 </code></pre>
+<blockquote>
+<p><strong>❓ Pregunta 1:</strong> <em>¿Para qué ha valido el <code>git clone</code>?</em></p>
+</blockquote>
+</li>
+<li>
+<p>Realiza un <a href="https://github.com/gitt-3-pat/p1/fork">&quot;fork&quot;</a> del repositorio anterior, <strong>poniéndole de nombre <code>p1-fork</code></strong>, y repite los pasos sobre él:</p>
+<pre><code class="language-bash">cd /workspaces
+git clone https://github.com/{usuario}/p1-fork
+ls p1-fork
+cat p1-fork/README.md
+</code></pre>
+<blockquote>
+<p><strong>❓ Pregunta 2:</strong> <em>Consulta la información sobre <a href="https://docs.github.com/es/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo">&quot;fork&quot;</a>, y explica qué hemos conseguido haciéndolo.</em></p>
+</blockquote>
 </li>
 </ol>
-<blockquote>
-<p><strong>❓ Pregunta:</strong> <em>¿Para qué ha valido el <code>git clone</code>?</em></p>
-</blockquote>
-<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>Si el enlace anterior no funciona, <a href="https://github.com/codespaces/new">crea</a> el Codespace en el repo <code>github/codespaces-blank</code></p>
-</div>
 
                     </main>
 
