deploy: e952cd7df82897f4c762553c8aedc2e738428940

--- a/intro/git/ramas.html
+++ b/intro/git/ramas.html
@@ -201,35 +201,11 @@ git push origin main
 <blockquote>
 <p>🔍 <strong>Nota:</strong> <em>En este caso no hemos necesitado hacer el <code>clone</code> puesto que el Codespace de este repo ya lo ha hecho automáticamente por nosotros.</em></p>
 </blockquote>
-<blockquote>
-<p><strong>❓ Pregunta 1:</strong> <em>¿Para qué han valido cada uno de los comandos <code>git</code> anteriores?</em></p>
-</blockquote>
-</li>
-<li>
-<p>Intenta hacer cambios sobre el repo <code>p1</code> que vimos en la página anterior:</p>
-<pre><code class="language-bash">cd /workspaces/p1
-touch nuevo.txt
-git add .
-git commit -m &quot;feat: nuevo fichero&quot;
-git push origin main
-</code></pre>
-<blockquote>
-<p><strong>❓ Pregunta 2:</strong> <em>Explica por qué ha fallado en este caso, viendo el resultado de los comandos en el terminal</em></p>
-</blockquote>
-</li>
-<li>
-<p>Repite los pasos anteriores pero sobre el <code>p1-fork</code>:</p>
-<pre><code class="language-bash">cd /workspaces/p1-fork
-touch nuevo.txt
-git add .
-git commit -m &quot;feat: nuevo fichero&quot;
-git push origin main
-</code></pre>
-<blockquote>
-<p><strong>❓ Pregunta 3:</strong> <em>¿Por qué ahora sí ha funcionado?</em></p>
-</blockquote>
 </li>
 </ol>
+<blockquote>
+<p><strong>❓ Pregunta:</strong> <em>¿Para qué han valido cada uno de los comandos <code>git</code> anteriores?</em></p>
+</blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Antes se llamaba <code>master</code> y hay algunos repos que consevan ese nombre.</p>
 </div>
