deploy: 858e337efe007fb656dafccb3530614f7f8aa8e9

--- a/intro/git/repositorio.html
+++ b/intro/git/repositorio.html
@@ -184,7 +184,7 @@
 <p>Desde tu cuenta personal de Github <a href="https://github.com/new">crea</a> un nuevo repositorio <strong>público</strong> llamado <code>ci-cd</code> inicializado con un fichero <code>README.md</code> .</p>
 </li>
 <li>
-<p>Una vez haya arrancado el entorno, desde el terminal del Codespace teclea:</p>
+<p><a href="https://github.com/codespaces/new">Crea un Codespace</a> en el repositorio anterior. Una vez haya arrancado el entorno, desde el terminal del Codespace teclea:</p>
 <pre><code class="language-bash">cd /workspaces
 git clone https://github.com/gitt-3-pat/p1
 ls p1
@@ -201,6 +201,9 @@ git clone https://github.com/{usuario}/p1-fork
 ls p1-fork
 cat p1-fork/README.md
 </code></pre>
+<blockquote>
+<p>⚠️ <strong>Importante</strong>: <em>Sustituye el <code>{usuario}</code> de la URL del clone por tu usuario de Github. Ejemplo: <code>{usuario} ⟶ apicai</code>.</em></p>
+</blockquote>
 <blockquote>
 <p><strong>❓ Pregunta 2:</strong> <em>Consulta la información sobre <a href="https://docs.github.com/es/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo">&quot;fork&quot;</a>, y explica qué hemos conseguido haciéndolo.</em></p>
 </blockquote>
