deploy: a047f831bc2b393050b21334e696af547bb9ae1a

--- a/intro/git/gitflow.html
+++ b/intro/git/gitflow.html
@@ -182,7 +182,7 @@
 <ol>
 <li>
 <p>Desde el terminal del Codespace anterior teclea:</p>
-<pre><code class="language-bash">cd /workspace/ci-cd
+<pre><code class="language-bash">cd /workspaces/ci-cd
 git checkout -b feat/add-body
 </code></pre>
 </li>
