deploy: 1a15017c99c43c22026b3a0949ac80c5a749bbf8

--- a/tema3/html/metadatos.html
+++ b/tema3/html/metadatos.html
@@ -178,7 +178,15 @@
                     <main>
                         <h1 id="html"><a class="header" href="#html">HTML</a></h1>
 <h2 id="metadatos"><a class="header" href="#metadatos">Metadatos</a></h2>
-<p>El elemento <code>head</code> contiene información para procesar el documento: la codificación de caracteres usada, los estilos asociados<sup class="footnote-reference"><a href="#1">1</a></sup>, los scripts necesarios<sup class="footnote-reference"><a href="#2">2</a></sup>, las palabras claves para indexar el documento por los buscadores<sup class="footnote-reference"><a href="#3">3</a></sup>, configuración de la ventana gráfica del navegador, etc. A continuación vemos un par de ejemplos de metadatos.</p>
+<p>El elemento <code>head</code> contiene información para procesar el documento: </p>
+<ul>
+<li>La codificación de caracteres usada</li>
+<li>Los estilos asociados<sup class="footnote-reference"><a href="#1">1</a></sup></li>
+<li>Los scripts necesarios<sup class="footnote-reference"><a href="#2">2</a></sup></li>
+<li>Las palabras claves para indexar el documento por los buscadores<sup class="footnote-reference"><a href="#3">3</a></sup></li>
+<li>La configuración de la ventana gráfica del navegador, etc. </li>
+</ul>
+<p>A continuación vemos un par de ejemplos de metadatos.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Mediante la etiqueta <code>&lt;link&gt;</code> o <code>&lt;style&gt;</code>.</p>
 </div>
