--- a/tema3/html/multimedia-iframe.html
+++ b/tema3/html/multimedia-iframe.html
@@ -207,7 +207,7 @@ Texto después
 </li>
 </ol>
 <blockquote>
-<p><strong>❓ Pregunta:</strong> <em>¿Cuáles son las ventajas para los autores al <a href="https://support.google.com/youtube/answer/171780?hl=en">incrustar su vídeo con un marco</a> respecto a añadirlo directamente con la etiqueta <code>&lt;video&gt;</code> que vimos anteriormente?</em></p>
+<p><strong>❓ Pregunta:</strong> <em>¿Cuáles son las ventajas para los creadores al <a href="https://support.google.com/youtube/answer/171780?hl=en">incrustar su vídeo con un marco</a> en vez de añadirlo directamente con la etiqueta <code>&lt;video&gt;</code> que vimos anteriormente?</em></p>
 </blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Las webs pueden impedir que otras intenten embeberlas usando la cabecera HTTP <code>X-Frame-Options: deny</code> por temas de seguridad o robo de contenido.</p>
