--- a/tema3/html/contenido-caracteres.html
+++ b/tema3/html/contenido-caracteres.html
@@ -188,12 +188,12 @@
 &amp;quot;
 </pre>
 </div>
-<p>Además, HTML ignora los retornos de carro normales introducidos en el código con la tecla <kbd>↲</kbd>. También, ignora varios espacios consecutivos e interpreta uno solo. En su lugar se usa <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/br"><code>&lt;br&gt;</code></a> y <code>&amp;nbsp;</code> respectivamente.</p>
+<p>Además, HTML ignora los retornos de carro introducidos en el código con la tecla <kbd>↲</kbd>. También ignora varios espacios consecutivos e interpreta uno solo. En su lugar se usa <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/br"><code>&lt;br&gt;</code></a> y <code>&amp;nbsp;</code> respectivamente.</p>
 <blockquote>
 <p>🔍 <strong>Nota:</strong> <em>Ni <code>&lt;br&gt;</code> ni <code>&amp;nbsp;</code> deben usarse para crear márgenes, ya que eso es estilo/maquetación, y debe realizarse con CSS como veremos en el siguiente tema.</em></p>
 </blockquote>
 <blockquote>
-<p><strong>❓ Ejercicio:</strong> <em>Separa en dos líneas el texto <code>&lt; &gt; &amp; &quot;</code> anterior. Prueba a introducir varios espacios normales entre caracteres, y comprueba como se visualiza.</em></p>
+<p><strong>❓ Ejercicio:</strong> <em>Separa en dos líneas el texto <code>&lt; &gt; &amp; &quot;</code> anterior. Prueba a introducir varios retornos de carro y espacios entre caracteres, y comprueba como se visualiza.</em></p>
 </blockquote>
 
                     </main>
