deploy: a6a3b91afcb1f75b8389ad6301ba16a7506e45fd

--- a/tema4/css/css.html
+++ b/tema4/css/css.html
@@ -177,7 +177,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="css"><a class="header" href="#css">CSS</a></h1>
-<p><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS">CSS</a> es el lenguaje que define cómo presentar la información contenida en un documento HTML. Esta separación entre contenido y presentación permite diseñar webs adaptadas a diferentes dispositivos y usuarios, e independizar el trabajo de los creadores de contenido de los diseñadores gráficos. El término &quot;presentación&quot; incluye colores, tipografías, tamaños, fondos, disposición de los elementos, etc.</p>
+<p><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS">CSS</a> es el lenguaje que <strong>define cómo presentar la información</strong> contenida en un documento HTML. Esta separación entre contenido y presentación permite diseñar webs adaptadas a diferentes dispositivos y usuarios, e independizar el trabajo de los creadores de contenido de los diseñadores gráficos. El término &quot;presentación&quot; incluye colores, tipografías, tamaños, fondos, disposición de los elementos, etc.</p>
 <h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
 <ul>
 <li>
