--- a/tema4/css/posicion-position.html
+++ b/tema4/css/posicion-position.html
@@ -224,6 +224,9 @@ p {
 </ol>
 <blockquote>
 <p><strong>❓ Ejercicio:</strong> <em>Para cada uno de los casos anteriores, identifica el punto de referencia utilizado para recolocar el elemento verde. Explica qué hace la propiedad eliminada en el último punto.</em></p>
+<details><summary><em>Esquema...</em></summary><br>
+<object type="image/svg+xml" data="./img/css.position.svg" width="100%"></object>
+</details>
 </blockquote>
 
                     </main>
