--- a/tema4/css/responsive-mediaqueries.html
+++ b/tema4/css/responsive-mediaqueries.html
@@ -187,7 +187,7 @@
   &lt;article class="contenido">Contenido&lt;/article>
   &lt;aside class="secciones">Secciones del sitio web&lt;/aside>
   &lt;aside class="indice">Índice del contenido&lt;/aside>
-  &lt;footer class="pie">Pié de página&lt;/footer>
+  &lt;footer class="pie">Pie de página&lt;/footer>
 &lt;/body></pre>
   <pre data-lang="css">body {
   display: grid;
