--- a/tema4/css/responsive-unidades.html
+++ b/tema4/css/responsive-unidades.html
@@ -234,16 +234,15 @@
 }
 .pixels p {
   margin: 0 0 16px 0;
-  font-size: 16px;
 }</pre></div>
 <p>En el ejemplo anterior, la propiedad <code>font-size</code> nos permite reconfigurar las proporciones del primer contenedor fácilmente, pero no del segundo. Ahora está al 100%, lo que indica que se está usando el valor por defecto de este navegador (o el configurado por el usuario). Añade la siguiente media query para ver lo fácil que es cambiar sus proporciones en caso de necesidad:</p>
 <pre><code class="language-css">@media (max-width: 30rem) {
-  .relativas { font-size: 50%; }
+  body { font-size: 50%; }
 }
 </code></pre>
 <p>Para ver la utilidad de lo anterior, vamos a ver lo que implicaría cambiar el segundo contenedor para ajustar sus proporciones a la mitad como hemos hecho con el primero.</p>
 <blockquote>
-<p><strong>❓ Ejercicio:</strong> <em>Las reglas CSS del segundo contenedor utilizan la clase <code>pixels</code>. Cambia primero su <code>font-size</code> a <code>8px</code> para ver como sus proporciones se desajustan solo con el cambio del tamaño de fuente. Luego modifica el resto de sus propiedades con la mitad de píxeles.</em></p>
+<p><strong>❓ Ejercicio:</strong> <em>Las reglas CSS del segundo contenedor utilizan la clase <code>pixels</code>. Como consecuencia todas sus proporciones se han desajustado solo con el cambio del tamaño de fuente. Para arreglarlo, modifica todas sus propiedades a la mitad de píxeles.</em></p>
 </blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Otra unidad relativa ampliamente utilizada es <code>%</code>: porcentaje relativo a la misma propiedad en el elemento padre (contenedor). Por ejemplo, un elemento con <code>width: 50%;</code> ocupará la mitad del ancho disponible en el contenedor.</p>
