--- a/tema5/js/apis-http-fetch-then-catch.html
+++ b/tema5/js/apis-http-fetch-then-catch.html
@@ -189,16 +189,16 @@
   body: JSON.stringify({cuerpo: 'peticion'})
 }).then(respuesta =&gt; {
   if (respuesta.ok) {
-    const objeto = respuesta.json();
-    console.log('Respuesta OK:', objeto);
-    // A continuación viene código que usa objeto ...
+    return respuesta.json();
   } else {
-    console.log('Respuesta KO:', respuesta.status);
-    // A continuación viene código que usa la respuesta ...
+    throw respuesta.status;
   }
+}).then(json =&gt; {
+    console.log('Respuesta OK:', json);
+    // A continuación viene código que usa objeto del json ...
 }).catch(error =&gt; {
   console.error('Error inexperado:', error);
-  // A continuación viene código que usa el error ...
+  // A continuación viene código que trata el error ...
 });
 </code></pre>
 <div class="codepen" data-height="460" data-theme-id="light" data-default-tab="js" data-editable="true" style="opacity:0" data-prefill='{"stylesheets":["https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css","https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"]}'>
@@ -222,13 +222,14 @@
     headers: {'Accept': 'application/json'}
   }).then(respuesta => {
     if (respuesta.ok) {
-      const objeto = respuesta.json();
-      mostrarMensajes(objeto);
+      return respuesta.json();
     } else {
-      mostrarError(respuesta.status);
+      throw respuesta.status;
     }
+  }).then(objeto => {
+    mostrarMensajes(objeto);
   }).catch(error => {
-    mostrarError(error.message);
+    mostrarError(error);
   });
 }
 // Lógica para cambiar la interfaz de usuario en función
