--- a/tema6/backend/prerrequisitos.html
+++ b/tema6/backend/prerrequisitos.html
@@ -179,10 +179,13 @@
                         <h1 id="backend"><a class="header" href="#backend">Backend</a></h1>
 <h2 id="prerrequisitos"><a class="header" href="#prerrequisitos">Prerrequisitos</a></h2>
 <p>Los ejercicios se realizarán usando <a href="https://www.jetbrains.com/es-es/idea/">IntelliJ IDEA</a>. Dentro de él, será necesario descargar y/o configurar una SDK versión 17 o superior: <em>"File" <code>➜</code> "Project settings" <code>➜</code> "Project" <code>➜</code> "SDK" <code>➜</code> "Download JDK"</em>.</p>
-<p>Adicionalmente, será necesario <a href="https://www.postman.com/">Postman</a> o <a href="https://httpie.io/">Httpie</a> para probar las APIs REST que se desarrollarán. Por último, para los tests de interfaz de usuario se utilizará <a href="https://www.cypress.io/">Cypress</a>.</p>
+<p>Adicionalmente, será necesario <a href="https://www.postman.com/">Postman</a> para probar<sup class="footnote-reference"><a href="#1">1</a></sup> las APIs REST que se desarrollarán. Por último, para los tests de interfaz de usuario se utilizará <a href="https://www.cypress.io/">Cypress</a>.</p>
 <blockquote>
 <p>🔍 <strong>Nota:</strong> <em>Estos mismos prerrequisitos aplican a los temas de Tests y Persistencia.</em></p>
 </blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Otras herramientas como <a href="https://httpie.io/">Httpie</a> o la extensión <a href="https://marketplace.visualstudio.com/items?itemName=humao.rest-client">Rest Client</a> de VsCode también valen para probar.</p>
+</div>
 
                     </main>
 
