--- a/tema6/backend/spring-errores-api.html
+++ b/tema6/backend/spring-errores-api.html
@@ -184,7 +184,7 @@
 <ul>
 <li>Se proporcionan datos incorrectos para crear un contador.</li>
 <li>Se intenta crear un contador que ya existe.</li>
-<li>Se intenta usar a un contador que no existe.</li>
+<li>Se intenta usar un contador que no existe.</li>
 </ul>
 <p>Para ello, sobre el proyecto MVC realiza los siguientes cambios:</p>
 <ol>
