--- a/tema6/backend/spring-mvc-api.html
+++ b/tema6/backend/spring-mvc-api.html
@@ -225,7 +225,7 @@
 </li>
 </ol>
 <blockquote>
-<p><strong>❓ Ejercicio 1:</strong> <em>Compila y ejecuta el proyecto desde el IDE. Utilizando <a href="https://www.postman.com/">Postman</a>, <a href="https://httpie.io/">Httpie</a> u otra aplicación para hacer peticiones HTTP, prueba el API llamando a <code>http://localhost:8080/api/contadores*</code> con el método, path y cuerpo correctos.</em></p>
+<p><strong>❓ Ejercicio 1:</strong> <em>Compila y ejecuta el proyecto desde el IDE. Utilizando <a href="https://www.postman.com/">Postman</a> u otra aplicación para hacer peticiones HTTP, prueba el API llamando a <code>http://localhost:8080/api/contadores*</code> con el método, path y cuerpo correctos.</em></p>
 </blockquote>
 <blockquote>
 <p><strong>❓ Ejercicio 2:</strong> <em>Crea un nuevo endpoint/recurso para que se pueda eliminar un contador dado utilizando la anotacion <code>@DeleteMapping</code>.</em></p>
