deploy: ee0bd6caf42eedeb6713a978031c2f2c7cbd670f

--- a/tema6/backend/spring-seguridad-autenticacion.html
+++ b/tema6/backend/spring-seguridad-autenticacion.html
@@ -187,16 +187,16 @@ public class ConfiguracionSeguridad {
     http.authorizeHttpRequests((authorize) -&gt; authorize.anyRequest().authenticated())
         .formLogin(Customizer.withDefaults())
         .httpBasic(Customizer.withDefaults())
-        .csrf().ignoringRequestMatchers("/api/**");
+        .csrf(csrf -&gt; csrf.ignoringRequestMatchers("/api/**"));
     return http.build();
   }
 
-  @Bean public InMemoryUserDetailsManager usuarios() {
+  @Bean public UserDetailsService usuarios() {
     UserDetails user = User.withDefaultPasswordEncoder()
-            .username("usuario")
-            .password("clave")
-            .roles("USER")
-            .build();
+        .username("usuario")
+        .password("clave")
+        .roles("USER")
+        .build();
     return new InMemoryUserDetailsManager(user);
   }
 }
