deploy: 02b13892e9e1fe7cf7e6a1f708a93cfef95dfd96

--- a/tema7/tests/herramientas-e2e-ui.html
+++ b/tema7/tests/herramientas-e2e-ui.html
@@ -195,7 +195,10 @@
 });
 </code></pre>
 <blockquote>
-<p><strong>❓ Ejercicio:</strong> <em><a href="https://download.cypress.io/app">Descarga Cypress</a> y añade el proyecto MVC para hacer "E2E Testing". Elige un navegador para ejecutarlo y crea una nueva "spec". Ábrela con un editor y copia el contenido JavaScript anterior. Arranca el proyecto MVC en IntelliJ. Y ejecuta la "spec" anterior. Implementa un test adicional que valide el comportamiento cuando se introduce un email incorrecto.</em></p>
+<p><strong>❓ Ejercicio 1:</strong> <em><a href="https://download.cypress.io/app">Descarga Cypress</a> y añade el proyecto MVC para hacer "E2E Testing". Elige un navegador para ejecutarlo y crea una nueva "spec". Ábrela con un editor y copia el contenido JavaScript anterior. Arranca el proyecto MVC en IntelliJ. Y ejecuta la "spec" anterior. Implementa un test adicional que valide el comportamiento cuando se introduce un email incorrecto.</em></p>
+</blockquote>
+<blockquote>
+<p><strong>❓ Ejercicio 2:</strong> <em><a href="./files/frontend.zip">Descarga este frontend</a> que utiliza el API de contadores. Para desplegarlo junto al API, copia su contenido en el directorio de recursos estáticos del proyecto MVC. Arranca el proyecto MVC en IntelliJ, <a href="http://localhost:8080/index.html">abre</a> dicha web en el navegador e interacciona con ella. Implementa una "spec" de Cypress para probar alguna de sus funcionalidades.</em></p>
 </blockquote>
 
                     </main>
