--- a/tema5/js/apis-http-fetch-async-await.html
+++ b/tema5/js/apis-http-fetch-async-await.html
@@ -187,7 +187,7 @@
     const respuesta = await fetch('URL', {
       method: 'POST',
       mode: 'cors',
-      headers: {'Accept': 'application/json'},
+      headers: {'Accept': 'application/json', 'Content-Type': 'application/json'},
       body: JSON.stringify({cuerpo: 'peticion'}),
     });
     if (respuesta.ok) {
