--- a/tema5/js/apis-http-fetch-then-catch.html
+++ b/tema5/js/apis-http-fetch-then-catch.html
@@ -185,7 +185,7 @@
 <pre><code class="language-js">fetch('URL', {
   method: 'POST',
   mode: 'cors',
-  headers: {'Accept': 'application/json'},
+  headers: {'Accept': 'application/json', 'Content-Type': 'application/json'},
   body: JSON.stringify({cuerpo: 'peticion'})
 }).then(respuesta =&gt; {
   if (respuesta.ok) {
@@ -219,7 +219,7 @@
   fetch('https://httpstat.us/200?' + new URLSearchParams({sleep: 4000}), {
     method: 'GET',
     mode: 'cors',
-    headers: {'Accept': 'application/json'}
+    headers: {'Accept': 'application/json', 'Content-Type': 'application/json'}
   }).then(respuesta => {
     if (respuesta.ok) {
       return respuesta.json();
